--- a/style.css
+++ b/style.css
@@ -10,9 +10,40 @@
 }
 html,body
 {
+    height: 100%;
+}
+body{
    
     font-family: 'roboto', sans-serif;
-
+display: flex;
+flex-direction: column;
+}
+#splash
+{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: 2;
+    background-color: var(--primary-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    transition: opacity 1s;
+}
+#splash img
+{
+    width: 300px;
+}
+#splash.fade
+{
+    opacity: 0;
+}
+.content
+{
+    flex: 1 0 auto;
 }
 .header
 {
@@ -96,4 +127,42 @@ grid-gap: 10px;
 width: 30px;
 
 align-self: flex-end;
+}
+.app-footer
+{
+    background-color: #f4f4f4;
+    color: #444;
+    padding: 10px;
+}
+.app-footer ul{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    list-style: none;
+}
+.app-footer ul li{
+    display: flex;
+    flex-shrink: 0;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+@media(min-width:768px)
+{
+    .subheader p{
+        font-size: 24px;
+    }
+    .subheader img
+    {
+        width: 60px;
+    }
+    .grid
+    {
+        grid-template-columns: repeat(3,1fr);
+    }
+    .grid .item img
+    {
+        width: 60px;
+    }
 }
